# Corte1

./: Cargo.toml
src/: categorias.txt  main.rs  main_backup.rs
