[package]
name = "keepass_rust_clone"
version = "0.1.0"
edition = "2021"

[dependencies]

winapi = { version = "0.3", features = ["winuser", "libloaderapi", "windef"] }
eframe = { version = "0.24", features = ["persistence"] }
egui_extras = { version = "0.24", features = ["all_loaders", "file", "datepicker"] }
image = { version = "0.25", features = ["png", "jpeg"] }
rfd = "0.12"
chrono = "0.4"
